--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -123,6 +123,7 @@
   "savedRoutesTo": "Minne",
   "savedRoutesSavedText": "Tallennettu",
   "savedLocations": "Tallennetut sijainnit",
+  "savedLocationsName": "Paikannimi",
   "savedLocationsLatitude": "Leveysaste",
   "savedLocationsLongtitude": "Pituusaste",
   "savedLocationsSavedText": "Tallennettu",
