--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -123,7 +123,7 @@
   "savedRoutesTo": "To",
   "savedRoutesSavedText": "Saved",
   "savedLocations": "Saved locations",
-  "savedLocationsName": "Locatoin name",
+  "savedLocationsName": "Location name",
   "savedLocationsLatitude": "Latitude",
   "savedLocationsLongtitude": "Longtitude",
   "savedLocationsSavedText": "Saved",
